# secureflock-swarm

./: .gitignore  CMakeLists.txt  LICENSE  README.md
controllers/footbot_secureflock/: CMakeLists.txt  PLACEHOLDER.md  footbot_secureflock.cpp  footbot_secureflock.h
experiments/: PLACEHOLDER.md  secureflock.argos  secureflock_batch.argos  secureflock_comms.argos  secureflock_noise.argos  secureflock_shot.argos  secureflock_single.argos
loop_functions/secureflock_loop_functions/: CMakeLists.txt  PLACEHOLDER.md  secureflock_loop_functions.cpp  secureflock_loop_functions.h
plotting/: plot_bearing_limitation.py  plot_coverage.py  plot_sensitivity.py
scripts/: sweep_bearing_limitation.sh  sweep_compare_coverage.sh  sweep_sensitivity.sh
